--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <style>
-      body {
+      /* body {
         padding: 200px;
-      }
+      } */
     </style>
   </head>
   <body>
